@@ -1,6 +1,7 @@
 window {
-    size(168,20)
+    size(168,44)
 
+    action('reset','reset')
     bind('analog','analog')
 
     panel('','vertical') {
@@ -10,6 +11,11 @@ window {
             desired(160,16)
             tooltips('Output the same power','level as the input, instead','of always 15 or 0')
             check(true)
+        }
+        button('reset','Reset Channel') {
+            channel('reset')
+            desired(160,16)
+            tooltips('Reset the channel')
         }
     }
 }
